[metadata]
name = RegexFactory
description_= Dynamically generate regex patterns
author = GrandMoff100
author_email = nlarsen23.student@gmail.com
version = attr: regexfactory.__version__
long_description = file: README.md
long_description_content_type = text/markdown
keywords = regex, generator, regular expression, strings
license = GPLv3
classifiers = 
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Programming Language :: Python
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
zip_safe = True
packages = regexfactory

[options.extras_require]
test =
    pytest
    hypothesis

[tool:pytest]
addopts = --hypothesis-show-statistics
markers =
    patterns: Tests for classes in regexfactory/patterns.py

[flake8]
ignore = E501
exclude = .git, __pycache__, .github
per-file-ignores = __init__.py:F401, conf.py:E402

[isort]
profile = black

[pylint.messages_control]
disable = too-few-public-methods, too-many-arguments, line-too-long
